// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalManager Snapshots should render with optional props 1`] = `
<ModalManager
  closeOnOutsideClick={false}
  disclosureAccessory={
    <div>
      Test Accessory
    </div>
  }
  shouldTrapFocus={false}
  withDisclosureContainer={[Function]}
>
  <TestChild />
</ModalManager>
`;

exports[`ModalManager Snapshots should render with required props 1`] = `
<ModalManager
  closeOnOutsideClick={false}
  shouldTrapFocus={false}
  withDisclosureContainer={[Function]}
>
  <TestChild />
</ModalManager>
`;
